# fastfpe

./: .bumpversion.cfg  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
crates/rust-fpe/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/rust-fpe/.github/workflows/: rust.yml
crates/rust-fpe/benches/: ff1.rs  ff3_1.rs
crates/rust-fpe/src/: aes.rs  alphabet.rs  ff1.rs  ff3_1.rs  ffx.rs  lib.rs
crates/rust-fpe/tests/: ff1.rs  ff3_1.rs
src/: ff1.rs  ff3_1.rs  lib.rs
tests/: benchmark.py  test_bench.py  test_ff1.py  test_ff3_1.py  test_hypothesis_ff1.py  test_hypothesis_ff3_1.py
