[package]
name = "fastfpe"
version = "0.2.0"
edition = "2021"
authors = ["Pedro Werneck <pedro.werneck@gmail.com>"]
description = "Fast Format Preserving Encryption (FPE) implementation in Rust"
license = "MIT"
repository = "https://github.com/pjwerneck/fastfpe"
readme = "README.md"

[lib]
name = "_rust_fastfpe"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
hex = "0.4"
fpe = { path = "crates/rust-fpe" }
# PyO3 0.22+ supports Python 3.13 and abi3 builds from 3.8 upward
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38", "generate-import-lib"], optional = true }