[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastfpe"
version = "0.1.1"
description = "Fast Format Preserving Encryption (FPE) implementation in Rust"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Pedro Werneck", email = "pedro.werneck@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Repository = "https://github.com/pjwerneck/fastfpe"
Documentation = "https://github.com/pjwerneck/fastfpe#readme"

[dependency-groups]
dev = [
    "ff3>=1.0.2",
    "hypothesis>=6.124.9",
    "pycryptodome>=3.21.0",
    "pytest>=8.3.4",
]

[tool.maturin]
features = ["python"]
module-name = "fastfpe._rust_fastfpe"  # Change this line to make it a submodule
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
exclude = [".git", ".venv"]
line-length = 99
target-version = "py312"
extend-exclude = ["neuropad/core/**"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true
