[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastfpe"
version = "0.2.0"
description = "Fast Format Preserving Encryption (FPE) implementation in Rust"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Pedro Werneck", email = "pedro.werneck@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.urls]
Repository = "https://github.com/pjwerneck/fastfpe"
Documentation = "https://github.com/pjwerneck/fastfpe#readme"

[dependency-groups]
dev = [
    "ff3>=1.0.2",
    "hypothesis>=6.0.0",
    "maturin>=1.8.1",
    "pycryptodome>=3.21.0",
    "pytest>=8.3.4",
    "pytest-benchmark[histogram]>=4.0.0",
]

[tool.maturin]
features = ["python"]
module-name = "fastfpe._rust_fastfpe"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
exclude = [".git", ".venv"]
line-length = 99
target-version = "py312"
extend-exclude = ["neuropad/core/**"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true
